# PixelAstral

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
Docs/: Note.md  Schema.md
pixel_astral_backend/: Cargo.toml
pixel_astral_backend/src/: config.rs  db.rs  main.rs
pixel_astral_backend/src/api/: game_api.rs  mod.rs  user_api.rs
pixel_astral_backend/src/service/: game_service.rs  user_service.rs
pixel_astral_backend/src/sql/: game_sql.rs  user_sql.rs
pixel_astral_backend/src/type/: game_type.rs  user_type.rs
pixel_astral_frontend/: README.md  pubspec.yaml
pixel_astral_frontend/android/app/: build.gradle.kts
pixel_astral_frontend/ios/Runner/: Info.plist
pixel_astral_frontend/ios/Runner.xcodeproj/: project.pbxproj
pixel_astral_frontend/lib/: main.dart  router.dart
pixel_astral_frontend/lib/component/: collection_card.dart  input_field.dart  retro_app_bar.dart  retro_fab.dart  status_badge.dart  status_dropdown.dart
pixel_astral_frontend/lib/screens/: add_edit_screen.dart  detail_screen.dart  home_screen.dart
pixel_astral_frontend/lib/service/: http.dart  novel.dart  user.dart
pixel_astral_frontend/lib/store/: auth.dart  novel.dart  user.dart
pixel_astral_frontend/lib/theme/: app_theme.dart
pixel_astral_frontend/lib/type/: collection_status.dart  collection_type.dart  novel.dart  user.dart
pixel_astral_frontend/linux/: CMakeLists.txt
pixel_astral_frontend/linux/runner/: my_application.cc
pixel_astral_frontend/test/: widget_test.dart
pixel_astral_frontend/web/: index.html  manifest.json
pixel_astral_frontend/windows/: CMakeLists.txt
(+7 files in other folders)
