[package]
name = "pixel_astral_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
async-trait = "0.1.81"
chrono = "0.4.38"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
config = "0.15.19"
mockall = "0.14.0"
dotenvy = "0.15"
jsonwebtoken = "10.3.0"
bcrypt = "0.18.0"
anyhow = "1.0"
uuid = { version = "1.20.0", features = ["serde", "v4", "chrono"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }